# velo

./: Cargo.toml  README.md
specs/velo/: .config.kiro  design.md  requirements.md  tasks.md
velo-app/: Cargo.toml
velo-app-bin/: Cargo.toml
velo-app-bin/src/: main.rs
velo-app/src/: app.rs  lib.rs
velo-core/: Cargo.toml
velo-core/src/: buffer.rs  command.rs  config.rs  lib.rs  mode.rs  render_state.rs  state.rs
velo-gui/: Cargo.toml
velo-gui/src/: gui.rs  lib.rs
velo-plugin/: Cargo.toml
velo-plugin/src/: lib.rs  manager.rs  plugin.rs  registry.rs
velo-tui/: Cargo.toml
velo-tui/src/: lib.rs  tui.rs
velo-types/: Cargo.toml
velo-types/src/: errors.rs  events.rs  lib.rs  position.rs  position_test.rs
