[package]
name = "velo-app-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
velo-app = { path = "../velo-app" }
velo-core = { path = "../velo-core" }
velo-tui = { path = "../velo-tui" }
velo-types = { path = "../velo-types"}
crossterm = "0.27"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
tokio = { workspace = true }
