[package]
name = "velo-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velo-types = { path = "../velo-types" }
velo-app = { path = "../velo-app" }
velo-core = { path = "../velo-core" }
tokio = { workspace = true }
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.27" }
